Fixed an issue with checkbox expand/collapse

--- a/ref.css
+++ b/ref.css
@@ -211,7 +211,7 @@
 }
 
 /* group sections */
-.ref section{
+.ref span{
   display: table;
   width: 100%;
 }
